<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/setting_catergory_sound_and_hints"
		android:persistent="true">

		<CheckBoxPreference android:persistent="true"
			android:summary="@string/setting_sound_summary" android:title="@string/setting_sound"
			android:defaultValue="false" android:key="sound" />
		<CheckBoxPreference android:key="vibrate"
			android:summary="@string/setting_vibrate_summary" android:title="@string/setting_vibrate"
			android:defaultValue="true" android:persistent="true"></CheckBoxPreference>
		<CheckBoxPreference android:summary="@string/setting_hint_summary"
			android:title="@string/setting_hint" android:persistent="true"
			android:defaultValue="true" android:key="hint"></CheckBoxPreference>
		<CheckBoxPreference android:dependency="hint"
			android:key="hint_light" android:persistent="true" android:title="@string/hint_mode"
			android:layout="?android:attr/preferenceLayoutChild"
			android:defaultValue="true" android:summaryOn="@string/hint_mode_summary_on"
			android:summaryOff="@string/hint_mode_summary_off"></CheckBoxPreference>
		<CheckBoxPreference android:key="zoom"
      android:summary="@string/setting_zoom_summary" android:title="@string/setting_zoom"
      android:defaultValue="false" android:persistent="true"></CheckBoxPreference>
    </PreferenceCategory>

	<PreferenceCategory android:title="@string/setting_catergory_keyboard"
		android:persistent="true">
		<CheckBoxPreference android:key="h_full"
			android:summary="@string/setting_keyboard_h_qwert_summary" android:title="@string/setting_keyboard_h_qwert"
			android:defaultValue="false" android:persistent="true"></CheckBoxPreference>
		<CheckBoxPreference android:key="v_full"
			android:summary="@string/setting_keyboard_v_qwert_summary" android:title="@string/setting_keyboard_v_qwert"
			android:defaultValue="false" android:persistent="true"></CheckBoxPreference>
		<CheckBoxPreference android:key="hide_others"
			android:summary="@string/setting_keyboard_hide_summary" android:title="@string/setting_keyboard_hide"
			android:defaultValue="false" android:persistent="true"></CheckBoxPreference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/setting_fuzzy">
		<PreferenceScreen android:title="@string/setting_fuzzy_title">
			<PreferenceCategory android:persistent="true"
				android:title="@string/setting_fuzzy_title">
				<CheckBoxPreference android:persistent="true"
					android:title="@string/z_zh" android:defaultValue="false"
					android:key="z_zh" />
				<CheckBoxPreference android:persistent="true"
					android:title="@string/c_ch" android:defaultValue="false"
					android:key="c_ch" />
				<CheckBoxPreference android:persistent="true"
					android:title="@string/s_sh" android:defaultValue="false"
					android:key="s_sh" />
				<CheckBoxPreference android:persistent="true"
					android:title="@string/an_ang" android:defaultValue="false"
					android:key="an_ang" />
				<CheckBoxPreference android:persistent="true"
					android:title="@string/en_eng" android:defaultValue="false"
					android:key="en_eng" />
				<CheckBoxPreference android:persistent="true"
					android:title="@string/in_ing" android:defaultValue="false"
					android:key="in_ing" />
				<CheckBoxPreference android:persistent="true"
					android:title="@string/l_n" android:defaultValue="false"
					android:key="l_n" />
				<CheckBoxPreference android:persistent="true"
					android:title="@string/f_h" android:defaultValue="false"
					android:key="f_h" />
				<CheckBoxPreference android:persistent="true"
					android:title="@string/r_l" android:defaultValue="false"
					android:key="r_l" />
				<CheckBoxPreference android:persistent="true"
					android:title="@string/ian_iang" android:defaultValue="false"
					android:key="ian_iang" />
				<CheckBoxPreference android:persistent="true"
					android:title="@string/uan_uang" android:defaultValue="false"
					android:key="uan_uang" />
			</PreferenceCategory>
		</PreferenceScreen>

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/setting_help">
		<PreferenceScreen android:title="@string/setting_about">
			<PreferenceCategory android:title="@string/setting_version_info">
				<PreferenceScreen android:key="version"
					android:summary="@string/setting_version_value" android:title="@string/setting_version_title">
				</PreferenceScreen>
				<PreferenceScreen android:key="publishing_date"
					android:summary="@string/setting_publishing_date_value"
					android:title="@string/setting_publishing_date_title">
				</PreferenceScreen>
			</PreferenceCategory>
			<PreferenceCategory android:key="authors"
				android:title="@string/setting_team_title">
				<!---
				<PreferenceScreen android:summary="@string/patent_holder"
					android:key="frank" android:title="@string/Frank"></PreferenceScreen>
				<PreferenceScreen android:summary="@string/founder"
					android:key="dhl" android:title="@string/dhl"></PreferenceScreen>
				<PreferenceScreen android:summary="@string/founder"
					android:key="carl" android:title="@string/Carl"></PreferenceScreen>
				<PreferenceScreen android:summary="@string/founder"
					android:key="rex" android:title="@string/Rex"></PreferenceScreen>
				<PreferenceScreen android:key="qzw"
					android:summary="@string/instructor" android:title="@string/qzw"></PreferenceScreen>
				-->
			</PreferenceCategory>
			<PreferenceCategory android:title="@string/setting_rights">
				<PreferenceScreen android:key="legal"
					android:title="@string/term_of_use" android:summary="@string/term_of_use_summary">
					<intent android:targetPackage="com.aeviou" android:targetClass="com.aeviou.setting.LicenseView"/>
				</PreferenceScreen>
			</PreferenceCategory>
		</PreferenceScreen>


	</PreferenceCategory>

</PreferenceScreen>